# TopologyAPI_task02

./: CMakeLists.txt  Doxyfile  README.md  _a_p_i_8cpp.html  _a_p_i_8h.html  _a_p_i_8h.js  _a_p_i_8h_source.html  _device_8cpp.html  _device_8h.html  _device_8h_source.html  _ml_8cpp.html  _ml_8h.html  _ml_8h_source.html  _netlist_8cpp.html  _netlist_8h.html  _netlist_8h_source.html  _nmos_8cpp.html  _nmos_8h.html  _nmos_8h.js  _nmos_8h_source.html  _r_e_a_d_m_e_8md.html  _resistance_8cpp.html  _resistance_8h.html  _resistance_8h_source.html  _resistor_8cpp.html  _resistor_8h.html  _resistor_8h_source.html  _topology_8cpp.html  _topology_8h.html  _topology_8h.js  _topology_8h_source.html  annotated.html  annotated_dup.js  build.sh  class_a_p_i-members.html  class_a_p_i.html  class_a_p_i.js  class_device-members.html  class_device.html  class_device.js  (+70 more)
.github/workflows/: main.yml
lib/: CMakeLists.txt
log/: analysis_errors  analysis_log  build_log  test_log
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+15 more)
src/: API.cpp  CMakeLists.txt  Device.cpp  Ml.cpp  Netlist.cpp  Nmos.cpp  Resistance.cpp  Resistor.cpp  Topology.cpp
src/include/: API.h  Topology.h
src/include/Attributes/: Ml.h  Netlist.h  Resistance.h
src/include/Devices/: Device.h  Nmos.h  Resistor.h
src/include/json/: json.h
test/: API_test.cpp  Device_test.cpp  Nmos_test.cpp  Resistor_test.cpp  Topology_test.cpp  compareTestFile.json
